# cookiecutter-pylibrary

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: mypy.ini  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: pyproject.toml
